--- a/static/public/index.html
+++ b/static/public/index.html
@@ -20,6 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>campfire</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Poppins|Playfair+Display&display=swap');
+    </style> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="dropzone.js"></script>
 
